# ghost-racer

./: .ghost-racer-root  .gitignore  README.md  conde_sim_setup.md  docker_run.bash  dqn_GhostRacer_log.json  kill_ghost-racer.sh  run.sh
src/conde_simulator/alvega/major_gazebo/objects/: green_box.sdf  traffic_sign.sdf
src/conde_simulator/autonomous_driving_world/launch/conde/: spawn_conde_in_competition_track_D1_D2_B1_P1.launch
src/conde_simulator/autonomous_driving_world/objects/: traffic_sign.sdf
src/conde_simulator/conde/conde_decision/src/: conde_decision_node.cpp
src/conde_simulator/conde/conde_gazebo/models/: conde.sdf
src/conde_simulator/conde/conde_key_teleop/: CMakeLists.txt
src/conde_simulator/conde/conde_key_teleop/src/: conde_key_teleop_node.py
src/conde_simulator/conde/conde_traffic_sign/src/: conde_traffic_sign_node.cpp
src/environment/: CMakeLists.txt  package.xml
src/environment/src/: agent.py  manual_agent.py  train.py
src/environment/src/env/: BoardPath.py  Env.py  GazeboEnv.py  GazeboMixin.py  State.py  board_path.py  requirements.txt
src/environment/src/image_processing/: ros_image.py
src/environment/src/tests/: TestAngleCalculations.py  TestDistanceFromPointToStraight.py  TestIntersectionPoint.py  TestStraightLineCalculations.py
src/environment/src/utils/: math_helpers.py
src/main_node/: CMakeLists.txt  package.xml
src/main_node/scripts/: main.py
src/stub_video_reader/: CMakeLists.txt  package.xml
src/stub_video_reader/src/: VideoReader.cpp  VideoReader.hpp  main.cpp
src/video_streamer/: CMakeLists.txt  package.xml
src/video_streamer/scripts/: camera_streamer.py  csi_camera_streamer.py  streamer.py  video_streamer.py
src/video_streamer/src/: CameraStreamer.cpp  CameraStreamer.hpp  VideoStreamer.cpp  VideoStreamer.hpp  main.cpp
src/video_streamer/srv/: VideoFrame.srv
