<?xml version="1.0"?>
<package format="2">
  <name>video_streamer</name>
  <version>0.0.1</version>
  <description>The video_streamer package</description>

  <maintainer email="jakub.tomczak@live.com">ghost-car</maintainer>
  <license>MIT</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msg</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
